ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Iko_Global_Configurations__mdt/Iko_Global_Configurations__mdt.object-meta.xml
<CustomObject>
    <label>Iko Global Configurations</label>
    <pluralLabel>Iko Global Configurations</pluralLabel>
</CustomObject>