ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Iko_Global_Configurations__mdt/fields/Default_Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_Vendor_Email__c</fullName>
    <label>Default Vendor Email</label>
    <type>Email</type>
</CustomField>