ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Iko_Global_Configurations__mdt/fields/Vendor_Email_CA__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email_CA__c</fullName>
    <label>Vendor Email CA</label>
    <type>Email</type>
</CustomField>