ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Iko_Global_Configurations__mdt/fields/Vendor_Email_US__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email_US__c</fullName>
    <label>Vendor Email US</label>
    <type>Email</type>
</CustomField>